test/bad/typeselection-bad-label.tajada
c es cachapa con (queso guayanés) o papelón.

{
        c⇒0 ≔ 4.
        c ∷ e {
                cheddar ∶ retorna 0.
        }
}
